vpc.tf
resource "aws_vpc" "test_vpc" {
  cidr_block = "10.0.0.0/21"
  tags = {
    Name = "test-vpc"
  }
}
